forcing html be 100vw to prevent shifting on popup showing

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -1,3 +1,7 @@
+html {
+  width: 100vw;
+}
+
 body {
   font-family: Montserrat;
 }
